Update official project URL

--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 erlcloud: Cloud Computing APIs For Erlang
 
-This project is now maintained at: https://github.com/gleber/erlcloud
+This project is now maintained at: https://github.com/erlcloud/erlcloud
